add styling for darkmode

--- a/Week-3/CSS/style.css
+++ b/Week-3/CSS/style.css
@@ -6,6 +6,7 @@ body {
     box-sizing: border-box;
     font-family: 'Almarai', sans-serif;
     scroll-behavior: smooth;
+    transition: all .3s ease-in-out;
 }
 
 @font-face {
@@ -63,10 +64,12 @@ header {
         color: #fff;
         text-shadow: 2px 2px 5px #008ac9;
     }
+
     50% {
         color: #008ac9;
         text-shadow: 2px 2px 5px red;
     }
+
     100% {
         color: #fff;
         text-shadow: 2px 2px 5px #008ac9;
@@ -95,6 +98,50 @@ header {
     font-weight: bold;
     padding-right: 48px;
     list-style-type: none;
+}
+
+.container-darkmode {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50%;
+}
+
+body.dark {
+    background-color: #18191a;
+    color: #fff;
+}
+
+.test1.dark {
+    color: #fff;
+}
+
+.toggle {
+    position: relative;
+    width: 35%;
+    height: 40px;
+    background-color: #008ac9;
+    border-radius: 100px;
+    box-shadow: 0px 5px 10px rgb(0, 0, 0, 0.1);
+    cursor: pointer;
+}
+
+.toggle::before {
+    content: "";
+    position: absolute;
+    width: 45%;
+    height: 35px;
+    background-color: #fff;
+    border-radius: 50%;
+    top: 50%;
+    left: 3px;
+    transform: translateY(-50%);
+    transition: all .3s ease-in-out;
+}
+
+.toggle.active::before {
+    left: calc(100% - 45% - 3px);
+    background-color: #18191a;
 }
 
 li>a {
@@ -133,7 +180,7 @@ li>a:hover {
     color: #fff;
     animation: 2s;
     animation-name: slidein1;
-    
+
 }
 
 @keyframes slidein1 {
@@ -141,6 +188,7 @@ li>a:hover {
         margin-left: 60%;
         color: #008ac9;
     }
+
     to {
         margin-left: 0%;
         color: #fff;
@@ -160,6 +208,7 @@ li>a:hover {
         margin-left: -50%;
         color: #008ac9;
     }
+
     to {
         margin-left: 0%;
         color: #fff;
@@ -232,27 +281,35 @@ li>a:hover {
     0% {
         left: 0;
     }
+
     20% {
         left: 0;
     }
+
     25% {
         left: -100%;
     }
+
     45% {
         left: -100%;
     }
+
     50% {
         left: -200%;
     }
+
     70% {
         left: -200%;
     }
+
     75% {
         left: -300%;
     }
+
     95% {
         left: -300%;
     }
+
     100% {
         left: -400%;
     }
@@ -554,10 +611,12 @@ h5 {
         color: #fff;
         text-shadow: 2px 2px 5px #008ac9;
     }
+
     50% {
         color: #008ac9;
         text-shadow: 2px 2px 5px red;
     }
+
     100% {
         transform: translateX(-100%);
         color: #fff;
@@ -605,7 +664,7 @@ h5 {
         cursor: pointer;
         transition: all 1s ease-in-out;
     }
-    
+
     .bmw-title:hover {
         color: #008ac9;
         letter-spacing: 2px;
@@ -679,8 +738,9 @@ h5 {
     @keyframes slidein1 {
         from {
             margin-left: -100%;
-            color: #008ac9; 
+            color: #008ac9;
         }
+
         to {
             margin-left: 0%;
             color: #fff;
@@ -792,7 +852,7 @@ h5 {
         display: flex;
         flex-direction: column;
     }
-    
+
     .container-form-1 {
         width: 90%;
         height: fit-content;
